--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-confirm-alert": "^2.4.1",
     "react-dev-utils": "^9.0.4",
     "react-dom": "^16.10.1",
+    "react-modal-image": "^2.5.0",
     "react-notifications-component": "^2.1.0",
     "react-redux": "^7.1.1",
     "react-router": "^5.1.1",
