--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "jest-resolve": "24.9.0",
     "jest-watch-typeahead": "0.4.0",
     "mini-css-extract-plugin": "0.8.0",
-    "node-sass": "^4.12.0",
+    "moment": "^2.24.0",
+    "node-sass": "^4.13.1",
     "optimize-css-assets-webpack-plugin": "5.0.3",
     "pnp-webpack-plugin": "1.5.0",
     "postcss-flexbugs-fixes": "4.1.0",
@@ -50,16 +51,22 @@
     "postcss-safe-parser": "4.0.1",
     "react": "^16.12.0",
     "react-app-polyfill": "^1.0.3",
+    "react-bootstrap-switch": "^15.5.3",
     "react-confirm-alert": "^2.4.1",
+    "react-datetime": "^2.16.3",
     "react-dev-utils": "^9.0.4",
     "react-dom": "^16.12.0",
+    "react-form-total": "^2.1.4",
     "react-gtm-module": "^2.0.8",
+    "react-input-range": "^1.3.0",
     "react-modal-image": "^2.5.0",
     "react-notifications-component": "^2.1.0",
+    "react-radio-group": "^3.0.3",
     "react-redux": "^7.1.1",
     "react-router": "^5.1.1",
     "react-router-dom": "^5.1.1",
     "react-scroll": "^1.7.14",
+    "react-select": "2.1.0",
     "react-sticky": "^6.0.3",
     "reactstrap": "^8.3.1",
     "redux": "^4.0.4",
@@ -69,7 +76,7 @@
     "sass-loader": "7.2.0",
     "semver": "6.3.0",
     "style-loader": "1.0.0",
-    "terser-webpack-plugin": "1.4.1",
+    "terser-webpack-plugin": "^2.3.2",
     "ts-pnp": "1.1.4",
     "url-loader": "2.1.0",
     "webpack": "4.40.2",
